--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Thesis Proposal</h1>
-<p> Thesis Proposal link:</p>
+<h1>Thesis Work</h1>
+<p> My thesis proposal will be held on 23 April, 2024. The slides can be found 
+	<a href="Hicks_thesis_proposal.pdf" target="_blank">here </a>
+	and the proposal itself can be found <a href="Hicks_thesis_proposal.pdf" target="_blank">here.</a>
+</p>
 </body>
 </html>
