--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Thesis Work</h1>
-<p> My thesis proposal will be held on 23 April, 2024. The slides can be found 
-	<a href="Hicks_thesis_proposal.pdf" target="_blank">here </a>
-	and the proposal itself can be found <a href="Hicks_thesis_proposal.pdf" target="_blank">here.</a>
+<p> "My thesis proposal will be held on 23 April, 2024. The slides can be found " 
+	<a href="Hicks_proposal_mini_deck.pptx" target="_blank">"here</a>
+	" and the proposal itself can be found <a href="Hicks_thesis_proposal.pdf" target="_blank">here</a>"."
 </p>
 </body>
 </html>
