--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 <h1>Thesis Work</h1>
-<p> My thesis proposal will be held on 23 April, 2024. The slides can be found
+<p> My thesis defense will be held on 22 April, 2025. 
+	My thesis can be found <a href="Hicks_thesis.pdf" target="_blank">here</a>.
+	
+	My proposal slides can be found
 	<a href="Hicks_proposal_mini_deck.pptx" target="_blank">here</a>
 	 and the proposal itself can be found <a href="Hicks_thesis_proposal.pdf" target="_blank">here</a>.
 </p>
