--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 <h1>Thesis Work</h1>
 <p> My thesis defense will be held on 22 April, 2025. 
-	My thesis can be found <a href="Hicks_thesis.pdf" target="_blank">here</a>.
+	My thesis slides can be found 
+	<a href="Hicks_thesis_slides.pttx" target="_blank">here</a> 
+	and the dissertation itself can be found <a href="Hicks_thesis.pdf" target="_blank">here</a>.
 	
 	My proposal slides can be found
 	<a href="Hicks_proposal_mini_deck.pptx" target="_blank">here</a>
